--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <button id="myBtnHTML"><img src="./img/htmlb.png" alt="" class="icon"><h5>HTML</h5></button>
                 <div id="myModalHTML" class="modalHTML">
                     <div class="modal-contentHTML">
-                        <span class="close">&times;</span>
+                        <span class="closeHTML">&times;</span>
                         <p>Some text in the Modal..</p>
                     </div>
                 </div>  
@@ -86,7 +86,7 @@
                 <button id="myBtnCSS"><img src="./img/cssb.png" alt="" class="icon"><h5>CSS </h5></button>
                 <div id="myModalCSS" class="modalCSS">
                     <div class="modal-contentCSS">
-                        <span class="close">&times;</span>
+                        <span class="closeCSS">&times;</span>
                         <p>Some text in the Modal..</p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                 <button id="myBtnWP"><img src="./img/wordpressb.png" alt="" class="icon"><h5>Wordpress</h5></button>
                 <div id="myModalWP" class="modalWP">
                     <div class="modal-contentWP">
-                        <span class="close">&times;</span>
+                        <span class="closeWP">&times;</span>
                         <p>Some text in the Modal..</p>
                     </div>
                 </div>  
