feat: Adding a js typewriter

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div id="citation">
             <div id="titleCitation">
-                <h5>"If it works, it works."</h5>   
+                <h5 id="textJs"></h5>   
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum repellendus fugiat deleniti deserunt vero aliquid voluptates dolorem odit iusto nulla facere incidunt ipsa, totam quaerat itaque, neque accusantium ex provident?
                     Voluptate blanditiis rerum cupiditate. Doloremque quaerat, animi hic eligendi omnis distinctio aut totam, quia sed adipisci provident fugit at esse autem accusantium temporibus repudiandae excepturi? Dicta officia deleniti architecto animi.</p>
             </div>
@@ -204,6 +204,7 @@
         </div>
     </footer>
     
+    <script src="./typewriter.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
